--- a/src/style/ar.scss
+++ b/src/style/ar.scss
@@ -44,6 +44,32 @@
     align-items: center;
     overflow: scroll;
     position: relative;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.ar-eye {
+    position: fixed;
+    bottom: 114px;
+    right: 28px;
+    width: 44px;
+    height: 44px;
+    display: flex;
+    opacity: .7;
+    border-radius: 7px;
+    background: rgba(0,0,0,.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    svg {
+        fill: white;
+        width: 75%;
+    }
+}
+
+.ar-nav-inner::-webkit-scrollbar {
+    display: none;
 }
 
 .ar-button {
@@ -51,23 +77,55 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 21px;
+    margin: 0 16px;
 
     .ar-circle {
-        width: 35px;
-        height: 35px;
+        width: 50px;
+        height: 50px;
         border-radius: 50%;
         margin: 0 0 5px;
-        background: grey;
+        border: 1px solid rgba(255,255,255,.75);
     }
 
     p {
-        color: black;
+        color: white;
         font-size: 10px;
         margin: 0;
         padding: 0;
-        background: none;
+        background: rgba(0,0,0,.2);
         white-space: nowrap;
+        padding: 3px 6px;
+        margin: 4px 0 10px 0;
+        border-radius: 3px;
+    }
+}
+
+.ar-nav-left-arrow {
+    position: fixed;
+    left: 14px;
+    bottom: 107px;
+    width: 25px;
+    height: 25px;
+
+    svg {
+        width: 100%;
+        fill: white;
+        opacity: .75;
+    }
+}
+
+.ar-nav-right-arrow {
+    position: fixed;
+    left: 44px;
+    bottom: 112px;
+    width: 25px;
+    height: 25px;
+    transform: rotate(180deg);
+
+    svg {
+        width: 100%;
+        fill: white;
+        opacity: .75;
     }
 }
 
@@ -80,6 +138,14 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
+}
+
+.ar-info-text {
+    background: rgba(0,0,0,.2);
+    padding: 5px 10px;
+    border-radius: 4px;
+    margin: 5px 5px 10px 0;
+    text-align: right;
 
     h1 {
         color: white;
@@ -101,7 +167,7 @@
         color: white;
         font-size: 14px;
         font-weight: 600;
-        margin:  0 0 14px;
+        margin:  0;
         padding: 0;
     }
 }
@@ -123,28 +189,32 @@
 
 .ar-logo-container {
     position: absolute;
-    left: 3px;
-    top: 18px;
+    left: 6px;
+    top: 6px;
     z-index: 1001;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    text-decoration: none;
+    padding: 7px 6px 6px 1px;
+    background: rgba(0,0,0,.2);
+    border-radius: 9px;
 
     img {
-        margin: -7px 0 0;
+        margin: -3px 0 0 0;
     }
 }
 
 .ar-logo-back {
-    transform: rotate(180deg);
-    width: 15px;
-    height: 15px;
-    margin: 0 7px;
+    width: 24px;
+    height: 24px;
+    margin: -22px -16px -7px 7px;
 
     svg {
         width: 80%;
         fill: white;
+        opacity: .5;
     }
 }
 
@@ -206,3 +276,47 @@
         }
     }
 }
+
+.ar-start-image-container {
+    position: fixed;
+    z-index: 1003;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.art-start-image-box {
+    position: relative;
+
+    img {
+        opacity: .5;
+    }
+
+}
+
+.art-start-line {
+    width: 100%;
+    height: 7px;
+    background: white;
+    position: absolute;
+    z-index: 1004;
+    top: 0;
+    left: 0;
+    // transform: translateY(100%);
+    animation: MoveUpDown 4s linear infinite;
+}
+
+@keyframes MoveUpDown {
+    0%, 100% {
+      top: 0%;
+    }
+    50% {
+      top: 100%;
+    }
+  }
