--- a/src/style/ar.scss
+++ b/src/style/ar.scss
@@ -287,11 +287,14 @@
     left: 0;
     padding: 0;
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .art-start-image-box {
     position: relative;
-    margin: 150px auto 0 auto;
+    margin-bottom: 55px;
 
     img {
         opacity: .5;
