added skate city

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,6 +5,16 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+}
+
+.main a {
+  background: #333;
+  color: white;
+  padding: 7px 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
 }
